adding more component

--- a/index.html
+++ b/index.html
@@ -36,10 +36,66 @@
         </nav>
 
         <!-- paragraph section -->
+        <section class="container">
+            <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae, quibusdam.</h2>
+            <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maiores ipsam dicta laborum officia recusandae a consequatur aspernatur esse exercitationem impedit? Fugiat provident assumenda officia impedit ut aliquam, quia ad doloremque ea perspiciatis inventore, modi incidunt nesciunt totam rerum dolores illo amet! Qui, distinctio porro cum enim eveniet dignissimos nam quas.
+            </p>
+            <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maiores ipsam dicta laborum officia recusandae a consequatur aspernatur esse exercitationem impedit? Fugiat provident assumenda officia impedit ut aliquam, quia ad doloremque ea perspiciatis inventore, modi incidunt nesciunt totam rerum dolores illo amet! Qui, distinctio porro cum enim eveniet dignissimos nam quas.
+            </p>
+            <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maiores ipsam dicta laborum officia recusandae a consequatur aspernatur esse exercitationem impedit? Fugiat provident assumenda officia impedit ut aliquam, quia ad doloremque ea perspiciatis inventore, modi incidunt nesciunt totam rerum dolores illo amet! Qui, distinctio porro cum enim eveniet dignissimos nam quas.
+            </p>
+        </section>
 
         <!-- image section -->
+        <section class="img1">
+            <div class="title">Parallax</div>
+        </section>
+
+        <!-- paragraph section -->
+        <section class="container">
+            <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae, quibusdam.</h2>
+            <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maiores ipsam dicta laborum officia recusandae a consequatur aspernatur esse exercitationem impedit? Fugiat provident assumenda officia impedit ut aliquam, quia ad doloremque ea perspiciatis inventore, modi incidunt nesciunt totam rerum dolores illo amet! Qui, distinctio porro cum enim eveniet dignissimos nam quas.
+            </p>
+            <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maiores ipsam dicta laborum officia recusandae a consequatur aspernatur esse exercitationem impedit? Fugiat provident assumenda officia impedit ut aliquam, quia ad doloremque ea perspiciatis inventore, modi incidunt nesciunt totam rerum dolores illo amet! Qui, distinctio porro cum enim eveniet dignissimos nam quas.
+            </p>
+            <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maiores ipsam dicta laborum officia recusandae a consequatur aspernatur esse exercitationem impedit? Fugiat provident assumenda officia impedit ut aliquam, quia ad doloremque ea perspiciatis inventore, modi incidunt nesciunt totam rerum dolores illo amet! Qui, distinctio porro cum enim eveniet dignissimos nam quas.
+            </p>
+        </section>
+
+        <!-- image section -->
+        <section class="img2">
+            <div class="title">Parallax</div>
+        </section>
+
+        <!-- paragraph section -->
+        <section class="container">
+            <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae, quibusdam.</h2>
+            <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maiores ipsam dicta laborum officia recusandae a consequatur aspernatur esse exercitationem impedit? Fugiat provident assumenda officia impedit ut aliquam, quia ad doloremque ea perspiciatis inventore, modi incidunt nesciunt totam rerum dolores illo amet! Qui, distinctio porro cum enim eveniet dignissimos nam quas.
+            </p>
+            <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maiores ipsam dicta laborum officia recusandae a consequatur aspernatur esse exercitationem impedit? Fugiat provident assumenda officia impedit ut aliquam, quia ad doloremque ea perspiciatis inventore, modi incidunt nesciunt totam rerum dolores illo amet! Qui, distinctio porro cum enim eveniet dignissimos nam quas.
+            </p>
+            <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maiores ipsam dicta laborum officia recusandae a consequatur aspernatur esse exercitationem impedit? Fugiat provident assumenda officia impedit ut aliquam, quia ad doloremque ea perspiciatis inventore, modi incidunt nesciunt totam rerum dolores illo amet! Qui, distinctio porro cum enim eveniet dignissimos nam quas.
+            </p>
+        </section>
+
+        <!-- image section -->
+        <section class="img3">
+            <div class="title">Parallax</div>
+        </section>
 
         <!-- footer section -->
+        <footer>
+            &copy; All right reserved  | Made my be with 
+        </footer>
     </div>
 
 </body>
